deployments/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openrtb-bidder
  labels:
    app: openrtb-bidder
spec:
  replicas: 10
  selector:
    matchLabels:
      app: openrtb-bidder
  template:
    metadata:
      labels:
        app: openrtb-bidder
    spec:
      containers:
      - name: bidder
        image: localhost:5000/pmadrid/openrtb-bidder:v1.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: "1000m"
            memory: "256Mi"
          limits:
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: openrtb-bidder-service
spec:
  type: ClusterIP
  selector:
    app: openrtb-bidder
  ports:
  - port: 80
    targetPort: 8080
    name: http
